[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lumap"
version = "0.1.0"
description = "Minimal CLI to convert AnnData to lumap viewer format and serve the web viewer"
authors = [{ name = "Lumap" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anndata>=0.9",
    "numpy>=1.23",
    "pandas>=1.5",
    "h5py>=3.8",
    "scipy>=1.10",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
lumap = "lumap_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lumap_cli*"]
